--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:url" content="">
 
   <!-- Estilos CSS -->
-  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="/css/main.css">
 
   <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  
+
 </head>
 
 <!---------------------------------------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
@@ -34,38 +34,38 @@
 
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <!-- Centrar el logo -->
-      <a class="navbar-brand mx-auto" href="index.html">
-          <img src="./img/logo.jpg" alt="logo">
-      </a>
-      
+    <!-- Centrar el logo -->
+    <a class="navbar-brand mx-auto" href="index.html">
+      <img src="./img/logo.jpg" alt="logo">
+    </a>
+
     <!-- Botón Hamburguesa -->
-<button class="navbar-toggler" type="button" id="hamburger-btn">
-  <span class="navbar-toggler-icon"></span>
-</button>
-      <!-- Menú desplegable -->
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="../pages/blog.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="../pages/desafios.html">Desafíos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="../pages/lecturas.html">Lecturas</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-              </li>
-          </ul>
-      </div>
-      <!-- Mover los íconos de redes sociales hacia la izquierda -->
-      <div class="ml-auto">
-          <a class="social-icon" href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a class="social-icon" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a class="social-icon" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
+    <button class="navbar-toggler" type="button" id="hamburger-btn">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- Menú desplegable -->
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/blog.html">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/desafios.html">Desafíos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/lecturas.html">Lecturas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
+    <!-- Mover los íconos de redes sociales hacia la izquierda -->
+    <div class="ml-auto">
+      <a class="social-icon" href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a class="social-icon" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a class="social-icon" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
   </nav>
 </header>
 
@@ -117,7 +117,7 @@
 
   <div class="contenedor-libro">
     <div class="titulo-libro">
-      
+
     </div>
     <div class="contenido-libro">
       <h1>Te Recomendamos</h1>
