--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 
+
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SmartBook - Blog de Libros: Reseñas, Recomendaciones y Noticias Literarias</title>
-  <meta name="description"
-    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta name="description" content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
   <meta name="keywords" content="libros, reseñas, recomendaciones, noticias literarias, lecturas, blog literario">
-
   <meta property="og:title" content="SmartBook - Blog de Libros">
-  <meta property="og:description"
-    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
-  <meta property="og:url" content="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/index.html">
+  <meta property="og:description" content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta property="og:url" content="URL_DE_TU_SITIO_WEB_AQUI">
 
   <!-- Estilos CSS -->
-  <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
 
   <!-- Iconos de Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="../script.js"></script>
 </head>
 
 
@@ -39,10 +38,10 @@
   <!---------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- Centrar el logo -->
-        <a class="navbar-brand mx-auto" href="#">
-            <img src="./img/logo.jpg" alt="logo">
-        </a>
+      <!-- Centrar el logo -->
+      <a class="navbar-brand mx-auto" href="../index.html">
+        <img src="../img/logo.jpg" alt="logo">
+      </a>
         
       <!-- Botón Hamburguesa -->
   <button class="navbar-toggler" type="button" id="hamburger-btn">
@@ -51,9 +50,7 @@
         <!-- Menú desplegable -->
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home</a>
-                </li>
+              
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/blog.html">Blog</a>
                 </li>
@@ -173,7 +170,7 @@
 
 
   <!------------------------------------------------------------------------- Footer --------------------------------------------------------------------------->
-
+  <script src="../script.js"></script>
 </body>
 
 </html>
