--- a/pages/lecturas.html
+++ b/pages/lecturas.html
@@ -15,7 +15,7 @@
   <meta property="og:url" content="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/index.html">
 
   <!-- Estilos CSS -->
-  <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="../script.js"></script>
+    
 </head>
 
 
@@ -38,21 +38,19 @@
 <body>
   <!---------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
   <header>
-    <!-- Usa las clases de Bootstrap para el navbar -->
-    <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">
-        <button id="mode-toggle" class="mode-toggle"><i class="fas fa-sun"></i><i class="fas fa-moon"></i></button>
-  
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <!-- Centrar el logo -->
+      <a class="navbar-brand mx-auto" href="../index.html">
         <img src="../img/logo.jpg" alt="logo">
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+  
+      <!-- Botón Hamburguesa -->
+      <button class="navbar-toggler" type="button" id="hamburger-btn">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- Menú desplegable -->
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="../index.html">Home</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="../pages/blog.html">Blog</a>
           </li>
@@ -67,12 +65,12 @@
           </li>
         </ul>
       </div>
-      <div class="social-icons">
+      <!-- Mover los íconos de redes sociales hacia la izquierda -->
+      <div class="ml-auto">
         <a class="social-icon" href="#" target="_blank"><i class="fab fa-facebook"></i></a>
         <a class="social-icon" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
         <a class="social-icon" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
-  
     </nav>
   </header>
   <!------------------------------------------------------------------------ Header ------------------------------------------------------------------------>
@@ -151,7 +149,7 @@
     </div>
   </footer>
   <!------------------------------------------------------------------------ Footer ------------------------------------------------------------------------>
-
+  <script src="../script.js"></script>
 </body>
 
 </html>
